# haskell-snake

./: README.md  snake.cabal  stack.yaml
src/: Main.hs  Types.hs
