name:                snake
version:             0.1.0.0
homepage:            https://github.com/themoritz/Haskell-Meetup-Jan-25-17/
license:             BSD3
license-file:        LICENSE
author:              Moritz Drexl
maintainer:          mdrexl@fastmail.fm
category:            Games
build-type:          Simple
cabal-version:       >=1.10

executable snake
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Types
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , lens
                     , ncurses
                     , mtl
                     , random
